--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Validate changed files
         id: set_outputs
         run: |
-          CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+          CHANGED_FILES=$(git diff --name-only ${{ github.sha }})
           echo "Changed files: $CHANGED_FILES"
           FRONTEND_CHANGED=false
           SERVICE_CHANGED=false
@@ -67,8 +67,6 @@ jobs:
       - name: Set up Node.js
         if: ${{ needs.validate_changes.outputs.frontend_changed == 'true' }}
         uses: actions/setup-node@v2
-        with:
-          node-version: '14'
 
       - name: Run npm run lint
         if: ${{ needs.validate_changes.outputs.frontend_changed == 'true' }}
@@ -85,6 +83,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        if: ${{ needs.validate_changes.outputs.frontend_changed == 'true' }}
+        uses: actions/setup-node@v2
+
+      - name: Run npm run format
+        if: ${{ needs.validate_changes.outputs.frontend_changed == 'true' }}
+        run: cd frontend && npm install && npm run format
 
       - name: Run make format
         if: ${{ needs.validate_changes.outputs.service_changed == 'true' }}
