--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Run make lint
         if: ${{ needs.validate_changes.outputs.service_changed == 'true' }}
-        run: cd services/${{ needs.validate_changes.outputs.service_name }} && make lint
+        run: cd services && make lint-module module=${{ needs.validate_changes.outputs.service_name }}
 
   format:
     name: Format
@@ -94,5 +94,25 @@ jobs:
 
       - name: Run make format
         if: ${{ needs.validate_changes.outputs.service_changed == 'true' }}
-        run: cd services/${{ needs.validate_changes.outputs.service_name }} && make format
+        run: cd services && make format-module module=${{ needs.validate_changes.outputs.service_name }}
+
+  testing:
+    name: Testing
+    runs-on: ubuntu-latest
+    needs: validate_changes
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        if: ${{ needs.validate_changes.outputs.frontend_changed == 'true' }}
+        uses: actions/setup-node@v2
+
+      - name: Run npm run test
+        if: ${{ needs.validate_changes.outputs.frontend_changed == 'true' }}
+        run: cd frontend && npm install && npm run test
+
+      - name: Run make test
+        if: ${{ needs.validate_changes.outputs.service_changed == 'true' }}
+        run: cd services && make test-module module=${{ needs.validate_changes.outputs.service_name }}
 
