--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,10 @@ stages:
   - lint
   - format
   - testing
+  - integration_test
+  - e2e_test
+  - test_deployment
+  - production_deployment
 
 variables:
   FRONTEND_FOLDER: "frontend"
@@ -114,9 +118,16 @@ validate_source_branch:
           echo "Error: Changes to review branch must come from main branch. Current source branch is $MR_SOURCE_BRANCH"
           exit 1
         fi
+      elif [ "$CI_COMMIT_REF_NAME" == "release" ]; then
+        MR_SOURCE_BRANCH=$(curl --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/merge_requests?source_branch=$CI_COMMIT_REF_NAME" | jq -r '.[0].source_branch')
+        if [ "$MR_SOURCE_BRANCH" != "review" ]; then
+          echo "Error: Changes to release branch must come from review branch. Current source branch is $MR_SOURCE_BRANCH"
+          exit 1
+        fi
       fi
   only:
     - review
+    - release
 
 integration_test:
   stage: integration_test
@@ -148,3 +159,23 @@ e2e_test:
     - validate_changes
   only:
     - review
+
+test_deployment:
+  stage: test_deployment
+  script:
+    - source validation.env
+    - echo "testing the deployment here"
+  dependencies:
+    - validate_changes
+  only:
+    - release
+
+production_deployment:
+  stage: production_deployment
+  script:
+    - source validation.env
+    - echo "deploying to prodution here"
+  dependencies:
+    - validate_changes
+  only:
+    - release
