--- a/frontend/package.json
+++ b/frontend/package.json
@@ -308,7 +308,9 @@
     "test-e2e": "echo 'not defined yet. We plan on using pupeteer'",
     "lint": "eslint 'js/**/*.js'",
     "format": "prettier --write 'js/**/*.js'",
-    "lint:fix": "eslint --fix 'js/**/*.js'"
+    "lint:fix": "eslint --fix 'js/**/*.js'",
+    "build-docker": "docker build .",
+    "start": "echo 'Running docker development httpd server. Visit http://localhost:89/' && docker run -d -p 89:80 --mount src=$(pwd),target=/usr/local/apache2/htdocs/,type=bind --name webapp httpd  && docker logs --follow webapp"
   },
   "keywords": [],
   "author": "",
