--- a/frontend/package.json
+++ b/frontend/package.json
@@ -318,6 +318,7 @@
   "description": "",
   "devDependencies": {
     "@angular-eslint/eslint-plugin-template": "^18.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0"
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "typescript": "^5.6.3"
   }
 }
