--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,11 +1,10 @@
 {
   "printWidth": 80,
-  "tabWidth": 2,
+  "tabWidth": 1,
   "singleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
   "semi": true,
-  "useTabs": false
+  "useTabs": true
 }
 
