--- a/frontend/package.json
+++ b/frontend/package.json
@@ -310,6 +310,8 @@
     "format": "prettier --write 'js/**/*.js'",
     "lint:fix": "eslint --fix 'js/**/*.js'",
     "build-docker": "docker build .",
+    "dev": "vite --host",
+    "build": "vite build",
     "create-component": "./npm-scripts/create-component.sh",
     "start": "echo 'Running docker development httpd server. Visit http://localhost:89/' && docker run -d -p 89:80 --mount src=$(pwd),target=/usr/local/apache2/htdocs/,type=bind --name webapp httpd  && docker logs --follow webapp"
   },
@@ -320,6 +322,7 @@
   "devDependencies": {
     "@angular-eslint/eslint-plugin-template": "^18.1.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9"
   }
 }
