--- a/frontend/package.json
+++ b/frontend/package.json
@@ -311,6 +311,8 @@
     "lint:fix": "eslint --fix 'js/**/*.js'",
     "build-docker": "docker build .",
     "dev": "vite --host",
+    "generate-openapi": "node ./npm-scripts/generate_kong_openapi.js",
+    "generate-api": "npm run generate-openapi && openapi-generator-cli generate -i ./api/merged-openapi.yaml -g typescript-axios -o ./api",
     "build": "vite build",
     "create-component": "./npm-scripts/create-component.sh",
     "start": "echo 'Running docker development httpd server. Visit http://localhost:89/' && docker run -d -p 89:80 --mount src=$(pwd),target=/usr/local/apache2/htdocs/,type=bind --name webapp httpd  && docker logs --follow webapp"
