--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 docker-compose.yml
+services/kong.yaml
 logs
+*/openapitools.json
+frontend/api
+frontend/dev-dist
+services/*/*
 *.log
 npm-debug.log*
 yarn-debug.log*
