--- a/frontend/package.json
+++ b/frontend/package.json
@@ -325,6 +325,7 @@
     "@angular-eslint/eslint-plugin-template": "^18.1.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "typescript": "^5.6.3",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
