--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "argparse": "^2.0.1",
     "aria-query": "^5.3.0",
     "asynckit": "^0.4.0",
+    "axios": "^1.7.7",
     "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-jest-hoist": "^29.6.3",
