feat(user-service): DBhandler, passwordlogin, middleware, utils
This big update includes a lot of changes in datahandling. One DB struct
is resposinble for all interactions with database. We have utils that
check cookies, set and unset them . We have middleware checking for JWT
token. Also password login and registering a new user is now possible

--- a/services/Makefile
+++ b/services/Makefile
@@ -200,6 +200,7 @@ user-service:
 	cd user && go mod init user; \
 	echo "Installing GORM (GO object relation manager)"; \
 	go get -u gorm.io/gorm; \
+	go get golang.org/x/crypto/bcrypt; \
 	go get -u github.com/rs/cors; \
 	go get -u gorm.io/driver/sqlite; \
 	go get -u github.com/go-webauthn/webauthn; \
