--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@ logs
 frontend/api
 frontend/dev-dist
 services/*/*
+frontend/js/const/host.ts
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+*.db
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
