fix(frontend): update kong generate (JWT, routes)
In our npm scripts we now use dotenv package to read env variables from
file. Also the jwt plugin is removed from kong, so that the services
must handle authenticate it self.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "domexception": "^4.0.0",
     "domhandler": "^5.0.3",
     "domutils": "^3.1.0",
+    "dotenv": "^16.4.5",
     "electron-to-chromium": "^1.5.3",
     "emittery": "^0.13.1",
     "emoji-regex": "^8.0.0",
