--- a/frontend/package.json
+++ b/frontend/package.json
@@ -117,6 +117,7 @@
     "hasown": "^2.0.2",
     "html-encoding-sniffer": "^3.0.0",
     "html-escaper": "^2.0.2",
+    "html5-qrcode": "^2.3.8",
     "htmlparser2": "^9.1.0",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.1",
