feat(services): reset password service implemented in user
User services does now implement a reset password mechanism. A reset
token with an expiration time is created and stored in the database.
This token is sent to the user and the usr clicks on the link. This link
opens a page to create a new password. The password is sent to the
server along with the token and username. after everything is validated
the new passwrod is set.

--- a/.envrc
+++ b/.envrc
@@ -8,3 +8,9 @@ KONG_HOST=http://localhost
 SERVICES_HOST=http://services_host
 FRONTEND_HOST=http://frontend_host
 FRONTEND_PORT=5173
+RESET_TOKEN_DURATION=15
+EMAIL_SMTP=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_FROM=
