--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ variables:
 
 validate_changes:
   stage: validate_changes
+  image: alpine/git
   script:
     - echo "Validating changed files"
     - |
