--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,12 @@ variables:
 
 validate_changes:
   stage: validate_changes
-  image: alpine/git
+    image: debian:bullseye-slim
+  variables:
+    GIT_STRATEGY: clone
+    GIT_DEPTH: 0
+  before_script:
+    - apt-get update && apt-get install -y git bash
   script:
     - echo "Validating changed files"
     - |
