feat(docker) use nginx server to serve built app

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -318,13 +318,13 @@
     "format": "prettier --write 'js/**/*.js'",
     "lint:fix": "eslint --fix 'js/**/*.js'",
     "build-docker": "docker build .",
-    "dev": "vite --host",
+    "dev": "vite --host --port 5174",
     "generate-openapi": "node ./npm-scripts/generate_kong_openapi.js",
     "generate-api": "npm run generate-openapi && openapi-generator-cli generate -i ./client_api/merged-openapi.yaml -g typescript-axios -o ./client_api -t ../.ressources/templates/openapi/axios",
     "build": "vite --config vite.config.mts build",
     "create-component": "./npm-scripts/create-component.sh",
     "model-components": "node npm-scripts/autoGenerateModelComponent.js",
-    "start": "echo 'Running docker development httpd server. Visit http://localhost:89/' && docker run -d -p 89:80 --mount src=$(pwd)/dist,target=/usr/local/apache2/htdocs/,type=bind --name webapp httpd && docker logs --follow webapp",
+    "start-nginx": "echo 'Running docker development nginx server. Visit http://localhost:89/' && docker run -d -p 5174:80 -v $(pwd)/nginx.conf:/etc/nginx/conf.d/default.conf:ro --mount src=$(pwd)/dist,target=/usr/share/nginx/html,type=bind --name webapp nginx && docker logs --follow webapp",
     "i18n-keys": "i18next '**/*.html' -c i18next-parser-config.ts"
   },
   "keywords": [],
